Retrieve Header Section

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set (SRCS
 	"${SOURCE_DIR}/main.c"
 	"${SOURCE_DIR}/japm.c"
 	"${SOURCE_DIR}/pbo/pbo_open.c"
+	"${SOURCE_DIR}/pbo/pbo_retrieve_entries.c"
 	"${SOURCE_DIR}/pbo/pbo_close.c"
 )
 
