--- a/include/japm_conf.h.in
+++ b/include/japm_conf.h.in
@@ -11,4 +11,11 @@
 #define JAPM_VERSION_MAJOR @JAPM_VERSION_MAJOR@
 #define JAPM_VERSION_MINOR @JAPM_VERSION_MINOR@
 
+#define JAPM_PATH_MAX_LENGTH @JAPM_PATH_MAX_LENGTH@
+#define JAPM_PATH_FORBIDDEN_CHARS "<>:\"|?*"
+
+#define JAPM_UNKNOWN_FILE_DIR "__JAPM__"
+#define JAPM_UNKNOWN_FILENAME "unknown"
+#define JAPM_UNKNOWN_FILEEXT ".txt"
+
 #endif /* JAPM_CONF_H_ */
