PBO Blocks Retrieval

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ set (SRCS
 	"${SOURCE_DIR}/main.c"
 	"${SOURCE_DIR}/japm.c"
 	"${SOURCE_DIR}/pbo/pbo_open.c"
+	"${SOURCE_DIR}/pbo/pbo_get_header_block.c"
+	"${SOURCE_DIR}/pbo/pbo_get_data_block.c"
+	"${SOURCE_DIR}/pbo/pbo_get_checksum_block.c"
 	"${SOURCE_DIR}/pbo/pbo_retrieve_entries.c"
 	"${SOURCE_DIR}/pbo/pbo_close.c"
 )
