--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
 		{
 			"label": "Build",
 			"type": "shell",
-			"command": "mkdir -p build && cd build && cmake .. && make",
+			"command": "mkdir -p build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Debug && make",
 			"group": {
 				"kind": "build",
 				"isDefault": true
