--- a/include/japm_conf.h.in
+++ b/include/japm_conf.h.in
@@ -8,6 +8,7 @@
 #ifndef JAPM_CONF_H_
 #define JAPM_CONF_H_
 
+#define JAPM_NAME @JAPM_NAME@
 #define JAPM_VERSION_MAJOR @JAPM_VERSION_MAJOR@
 #define JAPM_VERSION_MINOR @JAPM_VERSION_MINOR@
 
