--- a/include/japm_conf.h.in
+++ b/include/japm_conf.h.in
@@ -8,7 +8,9 @@
 #ifndef JAPM_CONF_H_
 #define JAPM_CONF_H_
 
-#define JAPM_NAME @JAPM_NAME@
+#define JAPM_NAME_SHORT @JAPM_NAME_SHORT@
+#define JAPM_NAME_COMPLETE @JAPM_NAME_COMPLETE@
+#define JAPM_NAME_FULL @JAPM_NAME_FULL@
 #define JAPM_VERSION_MAJOR @JAPM_VERSION_MAJOR@
 #define JAPM_VERSION_MINOR @JAPM_VERSION_MINOR@
 
