--- a/include/japm_conf.h.in
+++ b/include/japm_conf.h.in
@@ -8,9 +8,12 @@
 #ifndef JAPM_CONF_H_
 #define JAPM_CONF_H_
 
+#define JAPM_AUTHOR @JAPM_AUTHOR@
+#define JAPM_AUTHOR_WEBSITE @JAPM_AUTHOR_WEBSITE@
+#define JAPM_LICENSE @JAPM_LICENSE@
+#define JAPM_LICENSE_WEBSITE @JAPM_LICENSE_WEBSITE@
 #define JAPM_NAME_SHORT @JAPM_NAME_SHORT@
 #define JAPM_NAME_COMPLETE @JAPM_NAME_COMPLETE@
-#define JAPM_NAME_FULL @JAPM_NAME_FULL@
 #define JAPM_VERSION_MAJOR @JAPM_VERSION_MAJOR@
 #define JAPM_VERSION_MINOR @JAPM_VERSION_MINOR@
 
