--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,10 @@ set (LIB_DIR "${PROJECT_SOURCE_DIR}/lib")
 set (SRCS
 	"${SOURCE_DIR}/main.c"
 	"${SOURCE_DIR}/japm.c"
+	"${SOURCE_DIR}/ringbuf/ringbuf_init.c"
+	"${SOURCE_DIR}/ringbuf/ringbuf_read.c"
+	"${SOURCE_DIR}/ringbuf/ringbuf_write.c"
+	"${SOURCE_DIR}/ringbuf/ringbuf_destroy.c"
 	"${SOURCE_DIR}/args/args_getopt.c"
 	"${SOURCE_DIR}/args/args_print_help.c"
 	"${SOURCE_DIR}/args/args_print_version.c"
