--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ configure_file(
 include_directories("${INCLUDE_DIR}")
 include_directories("${LIB_DIR}/list/include")
 include_directories("${LIB_DIR}/utils/include")
+include_directories("${LIB_DIR}/sha1")
 
 file(GLOB LIBLIST_SRC "${LIB_DIR}/list/src/*.c")
 add_library(LIBLIST STATIC ${LIBLIST_SRC})
@@ -55,6 +56,9 @@ target_include_directories(LIBLIST PUBLIC "${LIB_DIR}/list/include")
 file(GLOB LIBUTILS_SRC "${LIB_DIR}/utils/src/*.c")
 add_library(LIBUTILS STATIC ${LIBUTILS_SRC})
 target_include_directories(LIBUTILS PUBLIC "${LIB_DIR}/utils/include")
+file(GLOB LIBLIST_SRC "${LIB_DIR}/sha1/*.c")
+add_library(LIBSHA1 STATIC ${LIBLIST_SRC})
+target_include_directories(LIBSHA1 PUBLIC "${LIB_DIR}/sha1")
 
 if(NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE Release)
@@ -70,3 +74,4 @@ set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Ofast")
 add_executable(JAPM ${SRCS})
 target_link_libraries(JAPM LIBLIST)
 target_link_libraries(JAPM LIBUTILS)
+target_link_libraries(JAPM LIBSHA1)
